--- a/components/footer.html
+++ b/components/footer.html
@@ -24,8 +24,8 @@
       <h4 class="text-base font-semibold text-dark mb-2">Contact</h4>
       <ul class="space-y-1 text-sm">
         <li>📍 Greater Manchester</li>
-        <li>📞 <a href="tel:01234567890" class="hover:text-primary">01234 567 890</a></li>
-        <li>📧 <a href="mailto:contact@groveblinds.co.uk" class="hover:text-primary">contact@groveblinds.co.uk</a></li>
+        <li>📞 <a href="tel:08000599579" class="hover:text-primary">08000 599579</a></li>
+        <li>📧 <a href="info@groveblindsuk.com" class="hover:text-primary">contact@groveblinds.co.uk</a></li>
       </ul>
     </div>
 
