overnightly 7th aug hotupdate. testimonials

--- a/components/header.html
+++ b/components/header.html
@@ -6,7 +6,7 @@
     <a href="/pages/our-shutters.html" class="hover:text-primary">Our Shutters</a>
     <a href="/index.html#gallery" class="hover:text-primary">Gallery</a>
     <a href="/index.html#why" class="hover:text-primary">Why Choose Us</a>
-    <a href="/index.html#testimonals" class="hover:text-primary">Testimonials</a>
+    <a href="/index.html#testimonials" class="hover:text-primary">Testimonials</a>
     <a href="/index.html#quote" class="hover:text-primary">Book</a>
   </nav>
   <div class="md:hidden" x-data="{ open: false }">
@@ -21,7 +21,7 @@
       <a href="/pages/our-shutters.html" class="block">Our Shutters</a>
       <a href="/index.html#gallery" class="block">Gallery</a>
       <a href="/index.html#why" class="block">Why Choose Us</a>
-      <a href="/index.html#testimonals" class="block">Testimonials</a>
+      <a href="/index.html#testimonials" class="block">Testimonials</a>
       <a href="/index.html#quote" class="block">Book</a>
     </div>
   </div>
